feat: Add comprehensive translation support and update changelog for v1.7.1

--- a/.gitignore
+++ b/.gitignore
@@ -81,6 +81,9 @@ build/
 # Documentation builds
 docs/_build/
 
+# Security audits
+SECURITY_AUDIT.md
+
 # Optional: Keep these if you want to track them
 # !.vscode/settings.json
 # !.vscode/tasks.json
